# packman

./: .clang-format  .gitignore  CMakeLists.txt  CODE_REVIEW_REPORT.md  EXECUTIVE_SUMMARY.md  README.md  REPORT.md  REVIEW_README.md  REVIEW_SUMMARY.md  Stopwatch.cpp  Stopwatch.h  main.cpp  report.docx
.circleci/: config.yml
.github/workflows/: main.yml
build_logic/: CMakeCache.txt  Makefile  cmake_install.cmake
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
build_test/code/logic/: Makefile  cmake_install.cmake
code/: BaseFactory.cpp  Stopwatch.cpp  Stopwatch.h  camera.cpp  camera.h  game.cpp  game.h  observer.cpp  observer.h  world.cpp  world.h
code/logic/: CMakeLists.txt  LogicFactory.cpp  LogicFactory.h  Observer.cpp  Observer.h  Score.cpp  Score.h  Stopwatch.cpp  Stopwatch.h  abstractFactory.cpp  abstractFactory.h  notifications.h  random.cpp  random.h  world.cpp  world.h
code/logic/entities/: Ghost.cpp  Ghost.h  Score.cpp  Score.h  collectable.cpp  collectable.h  entity.cpp  entity.h  manhattanGhost.cpp  manhattanGhost.h  manhattenGhost.cpp  manhattenGhost.h  movableEntity.cpp  movableEntity.h
code/logic/state_maneger/: make_text.cpp  make_text.h  state.cpp  state.h  stateManeger.cpp  stateManeger.h
code/render/: ScoreView.cpp  collectableEntityView.cpp  collectableEntityView.h  collectableView.cpp  collectableView.h  entityView.cpp  entityView.h  ghostView.cpp  ghostView.h  movableEntityView.cpp  movableEntityView.h  notifications.h  render.cpp  render.h  worldView.cpp  worldView.h
code/view/: BaseFactory.cpp  BaseFactory.h  ScoreView.cpp  ScoreView.h  ViewFactory.cpp  ViewFactory.h  camera.cpp  camera.h  concreteFactory.cpp  concreteFactory.h  entityView.h  game.cpp  game.h  ghostView.cpp  movableEntityView.cpp  movableEntityView.h  notifications.h  observerView.cpp  observerView.h  worldView.cpp  worldView.h
code/view/entities/: collectableView.cpp  collectableView.h  entityView.cpp  entityView.h  ghostView.cpp  ghostView.h  movableEntityView.cpp  movableEntityView.h
code/view/state_maneger/: make_text.cpp  make_text.h  state.cpp  state.h  stateManeger.cpp  stateManeger.h
html/: BaseFactory_8h_source.html  Ghost_8h_source.html  LogicFactory_8h_source.html  Observer_8h_source.html  ScoreView_8h_source.html  Score_8h_source.html  Stopwatch_8h_source.html  ViewFactory_8h_source.html  abstractFactory_8h_source.html  annotated.html  camera_8h_source.html  classBaseFactory-members.html  classBaseFactory.html  classBaseFactory__inherit__graph.map  classBaseFactory__inherit__graph.md5  classIObserver-members.html  classIObserver.html  classIObserver__inherit__graph.map  classIObserver__inherit__graph.md5  classLevelState-members.html  classLevelState.html  classLevelState__inherit__graph.map  classLevelState__inherit__graph.md5  classNotificationsBase-members.html  classNotificationsBase.html  classNotificationsBase__coll__graph.map  classNotificationsBase__coll__graph.md5  classObserver-members.html  classObserver.html  classObserver__coll__graph.map  classObserver__coll__graph.md5  classObserver__inherit__graph.map  classObserver__inherit__graph.md5  classPackman-members.html  classPackman.html  classPackman__coll__graph.md5  classPackman__inherit__graph.map  classRender-members.html  classRender.html  classRender__coll__graph.map  (+526 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+34 more)
input_output/: HighScores.txt  logica.txt  map.txt  vragen.txt
logic/: Stopwatch.cpp  Stopwatch.h  camera.cpp  camera.h  game.cpp  observer.cpp  observer.h  render.cpp  render.h  world.cpp  world.h
logic/entities/: collectable.cpp  collectable.h  entity.cpp  entity.h  movableEntity.cpp  movableEntity.h
logic/state_maneger/: stateManeger.cpp  stateManeger.h
